<resources>
    <string name="app_name">Medicosperuanos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    <string name="state_prompt">State</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyAvL-0g4dIUJ57UQDh3OIvIAm6W5P7Th6s </string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="review">The best doctor In this area, The best doctor In this area. OK kr k doctor hai ye!</string>
    <string name="signup_string">Do not have an account? <i>Sign Up</i> </string>
    <string name="sign_up_string">Do not have an account? <i>Sign Up</i></string>
    <string-array name="date_array">
        <item>12–2–2017</item>
    </string-array>
    <string name="account_activation">Account Activation</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="permission_dialog_title">Location Permission Required</string>
    <string name="permission_dialog_message">In order to get address, Location permission is required. please grant it manually</string>
    <string name="location_permission_for_route">In order to view doctors on map Location permission is required. please grant it manually</string>
    <string name="close">Close</string>
    <string name="permission_denied">Permission denied !</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="acquiring_location">Acquiring location please wait..</string>
    <string name="email">Email</string>
    <string name="resend">Resend</string>
    <string name="activate">Activate</string>
    <string name="phone_1">Phone-1</string>
    <string name="phone_2">Phone-2</string>
    <string name="college_id">College ID</string>
    <string name="consultation_time">Consultation Time</string>
    <string name="notifications">Notifications</string>
    <string name="news">News</string>
    <string name="terms_and_conditions">I accept the terms and conditions</string>
    <string name="save">Save</string>
    <string name="terms_and_conditions_of_the_services">Terms and conditions of the services</string>
    <string name="recover">Recover</string>
    <string name="password_forgot">Forgot Password?</string>
    <string name="old_password">Password reset key</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_am_a_doctor">I am a Doctor</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_login">Already have an account? <i>Login</i></string>
    <string name="doc_id">DocID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_your_gender">Please chose your Gender</string>
    <string name="pick_for_current_location">Pick for current location</string>
    <string name="enter_address">please provide your address</string>
    <string name="address">Address</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="login_faild">Login Failed!</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="email_not_exist">Email does not exist on server</string>
    <string name="check_password">Please enter correct password</string>
    <string name="activate_your_account">Please activate your account !</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="dashboard">Dashboard</string>
    <string name="storage_permission_message">For Offline usage of this application app needs to save some images and data on your mobile.
    please grant storage permission</string>
    <string name="storage_permission_dialog_title">Storage Permission Required</string>
    <string name="time_slot_booked">Time Slot already Booked</string>
    <string name="sample_message">Sample Message</string>
    <string name="updating">Setting up profile</string>
    <string name="updating_profile">Updating profile</string>
    <string name="updating_attention">Updating Attention</string>
    <string name="finishing_up">Finishing up</string>
    <string name="appointments">Appointments</string>
    <string name="my_patient_details">My Patient Details</string>
    <string name="messages">Messages</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="no_doctor_available">No Doctor Available</string>
    <string name="no_doctor_available_snack_bar">No doctor available in next 7 days</string>
    <string name="success">Schedule Created Successfully</string>
    <string name="my_patient">My patient</string>
    <string name="my_schedule">My Schedule</string>
    <string name="update_profile">Update profile</string>
    <string name="profile_updated">Profile Successfully updated</string>
    <string name="cannot_go_back_from_current_date">Cannot go back from current date</string>
    <string name="please_enter_appointment_reason">please enter appointment reason</string>
    <string name="appointment_created">Appointment Created</string>
    <string name="account_not_activated">Account not activated. we will mail you when your account gets activated</string>
    <string name="account">Account</string>
    <string name="review_submitted_failed">Doctor already reviewed by you</string>
    <string name="review_failed">Review Submitted Failed !</string>
    <string name="review_submitted">Review Submitted!</string>
    <string name="review_submitted_successfully">You have reviewed successfully</string>
    <string name="getting_doctor_list">Getting doctors list…</string>
    <string name="getting_schedule">fetching schedule…</string>
    <string name="setting_up_schedule">setting up schedule…</string>
    <string name="updating_schedule">updating schedule…</string>
    <string name="getting_patients">fetching patients…</string>
    <string name="getting_favourite_doctors">fetching favourite doctor</string>
    <string name="fetching_my_appointments">Getting appointments…</string>
    <string name="no_services">No Service</string>
    <string name="no_services_message">No Service set by this doctor</string>
    <string name="schedule_is_not_set_by_any_of_your_favorite_doctors">Schedule is not set by any of your favorite doctors</string>
    <string name="select_service">Select Required Service</string>
    <string name="accept_appointment_first">You must accept this appointment first…</string>
    <string name="network_unreachable">Network is unreachable</string>
    <string name="already_taken">Cannot remove booked slot</string>
    <string name="slot_deleted">slot deleted</string>
    <string name="cannot_reject_attended_appointment">cannot reject attended appointment</string>
    <string name="diagnostics">Select Diagnostics</string>
    <string name="medications">Select Medications</string>
    <string name="schedule_updated">Schedule Successfully updated</string>
    <string name="connection_time_out">Connection timeout</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="getting_appointments">Getting appointments</string>
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="message_error">cannot send empty message</string>
    <string name="appointment_already_taken">appointment already taken</string>
    <string name="rejected_appointment_cannot_be_opened">cannot open rejected appointment</string>
    <string name="no_speciality_selected">please select atleast one speciality</string>
    <string name="loading">loading</string>
    <string name="an_error_occurred">An error occurred, please try again</string>
    <string name="profile_update_failed">Profile update Failed!</string>
    <string name="provide_valid_email">Provide a valid Email Address</string>
    <string name="account_inactive">Inactive Account</string>
    <string name="inactive_message">Your account is inactive, please wait for admin\'s approval. You will receive a activation Email</string>
    <string name="write_a_message">Write a message</string>
    <string name="book">Book</string>
    <string name="view_all_reviews">View All Reviews</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="services">Services</string>
    <string name="select_required_services">Select Required Services</string>
    <string name="appointment_reason">appointment reason...</string>
    <string name="total">Total :</string>
    <string name="requested_services">Requested services</string>
    <string name="exploration_250_character_max">Exploration.(250 character max)</string>
    <string name="list_of_medication_for_selection">List of medication for selection</string>
    <string name="date_of_return">Date of return</string>
    <string name="conclusion">Conclusion</string>
    <string name="appointment">Appointment</string>
    <string name="confirmed">Confirmed</string>
    <string name="attended">Attended</string>
    <string name="total_appointments_today">Total Appointments Today</string>
    <string name="to_be_confirmed">To be Confirmed</string>
    <string name="today_income">Today Income</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="distance_km">Distance (km)</string>
    <string name="speciality">Speciality</string>
    <string name="clinic">Clinic</string>
    <string name="pick_date">Pick Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="verification_code">Verification Code</string>
    <string name="select_quantity">please select quantity first</string>
</resources>